--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "homepage": "https://fake-company.github.io/test-react-app",
   "dependencies": {
     "@masonite/external-ui-react": "^1.4.0",
+    "dotenv": "^6.2.0",
     "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "predeploy": "npm run build",
