--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@masonite/external-ui-react": "^1.4.0",
     "dotenv": "^6.2.0",
     "gh-pages": "^2.0.1",
+    "history": "^4.7.2",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
