--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "extends": "@masonite",
     "rules": {
       "react/prefer-stateless-function": 0,
+      "react/prop-types": 0,
       "no-alert": 0,
       "no-console": 0
     }
